--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ scipy = "1.7.3"
 [tool.poetry.dev-dependencies]
 black = "22.12.0"
 flake8 = "6.0.0"
+icecream = "2.1.3"  # not installed on leetcode
 pylint = "2.15.9"
 pytest = "7.2.0"
 
