--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,15 +8,9 @@ authors = ["gnkm <genki.matsunaga@gmail.com>"]
 # https://leetcode.com/playground/DreLujJB
 python = "3.11.7"
 
-numpy = "1.22.1"
-scipy = "1.7.3"
-
-[tool.poetry.dev-dependencies]
-black = "22.12.0"
-flake8 = "6.0.0"
-icecream = "2.1.3" # not installed on leetcode
-pylint = "2.15.9"
-pytest = "7.2.0"
+[tool.poetry.group.dev.dependencies]
+pytest = "8.0.0"
+icecream = "2.1.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
